--- a/views/admin/add_product.ejs
+++ b/views/admin/add_product.ejs
@@ -3,24 +3,27 @@
     <%- include('../includes/navigation.ejs') %>
       <main>
         <div class="container">
-          <form action="/admin/<% if(editing){%>edit-product<%}else{%>add_product<% } %>" method="post">
+          <form action="/admin/<% if(editing){%>edit-product<%}else{%>add_product<%}%>" method="post">
             <div class="form-group">
               <label for="exampleInputEmail1">نام محصول</label>
               <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="نام محصول را وارد کنید : " name="title">
+                placeholder="نام محصول را وارد کنید : " name="title" value="<% if(editing){%><%= product.title %><%}%>">
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">قیمت</label>
               <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="قیمت را وارد کنید : " name="price">
+                placeholder="قیمت را وارد کنید : " name="price" value="<% if(editing){%><%= product.price %><%}%>">
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">آدرس عکس</label>
               <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="آدرس عکس را وارد کنید : " name="imageUrl">
+                placeholder="آدرس عکس را وارد کنید : " name="imageUrl" value="<% if(editing){%><%= product.imageUrl %><%}%>">
             </div>
-            <textarea name="description" id="description" placeholder="توضیحات" name="description"></textarea>
-            <button type="submit" class="btn btn-primary" name="submit">ثبت</button>
+            <textarea name="description" id="description" placeholder="توضیحات" name="description"><% if(editing){%><%= product.description %><%}%></textarea>
+            <button type="submit" class="btn btn-primary" name="submit"><% if(editing){%>ویرایش<% }else{%>ثبت<%}%></button>
+            <% if(editing) {%>
+              <input type="hidden" value="<%= product._id %>" name="productId">
+              <% } %>
           </form>
         </div>
       </main>
