--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -16,7 +16,7 @@
                 <a href="/admin/add_product" class="tab <%= path === '/admin/add_product' ? 'active' : '' %>">افزودن محصول</a>
             </li>
             <li class="nav-item">
-                <a href="/admin/edit-products" class="tab" <%= path ===  '/admin/edit-products' ? 'active' : '' %> >محصولات ادمین</a>
+                <a href="/admin/products" class="tab" <%= path ===  '/admin/products' ? 'active' : '' %> >محصولات ادمین</a>
             </li class="nav-item">
         </ul>
     </div>
