add remoev product

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -13,7 +13,11 @@
         <div class="price"><%= product.price %> $</div>
         <div class= 'product_description'><%= product.description %></div>
         <button class="btn-edit"><a href="/admin/edit-product/<%= product._id %>?edit=true">ویرایش</a></button>
-        <button class="btn-remove"><a href="">حذف</a></button>
+        <form action="/admin/delete-product" method="post">
+            <input type="hidden" value="<%= product._id %>" name="productId">
+            <button class="btn-remove" type="submit">حذف</button>
+        </form>
+        
         </div>
     <% } %>
      </div>
