--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -4,7 +4,7 @@
                 <a href="/" class="tab <%= path === '/' ? 'active' : '' %>">خانه</a>
             </li>
             <li class="nav-item">
-                <a href="" class="tab">محصولات</a>
+                <a href="/products" class="tab <%= path === '/products' ? 'active' : '' %>">محصولات</a>
             </li>
             <li class="nav-item">
                 <a href="" class="tab">سبد خرید</a>
