--- a/public/style.css
+++ b/public/style.css
@@ -122,12 +122,14 @@
 }
 
  .btn {
-     padding: 10px 20px;
+     padding: 10px 15px;
      background: #2196F3;
      color: white;
      border: none;
      border-radius: 5px;
      cursor: pointer;
+     margin: auto;
+     margin-right: 10px;
  }
 
  .btn:hover {
@@ -194,11 +196,25 @@
     
 }
 
+.btn-container{
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+
+}
+
+.cart-btn{
+    height: 40px;
+    font-size: 17px;
+}
+
 .btn a {
     color: white;
     text-decoration: none;
     transition: color 0.2s ease;
     font-size: 17px;
+    
     
 }
 .btn a:hover{
