couldnt do cart

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -15,10 +15,8 @@
         <div class="btn-container">
         <button class="btn btn-info"><a href="/product/<%= product._id %>">جزئیات</a></button>
         <% if(path ==='/products'){%>
-            <%- include('../includes/add-to-cart.ejs') %>
-        <% }else{ %>
-            <button class="btn btn-info"><a href="/product/<%= product._id %>">افزودن به سبد خرید</a></button>
-            <% } %>
+            <%- include('../includes/add-to-cart.ejs',{product:product}) %>
+        <% } %>
         </div>
         </div>
     <% } %>
