--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,5 @@
 <form action="/cart" method="post">
     <button class="btn cart-btn">افزودن به سبد خرید</button>
+    <input type="hidden" name="productId" value="<%= product._id %>">
 </form>
 
